HHH-20196 | HHH-20197 refactor CustomRunner.java