@@ -7,7 +7,6 @@ package org.hibernate.testing.junit4;
 import java.lang.annotation.Annotation;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -169,14 +168,7 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 		if ( CollectionHelper.isEmpty( computedTestMethods ) ) {
 			return;
 		}
-		Collections.sort(
-				computedTestMethods, new Comparator<FrameworkMethod>() {
-					@Override
-					public int compare(FrameworkMethod o1, FrameworkMethod o2) {
-						return o1.getName().compareTo( o2.getName() );
-					}
-				}
-		);
+		computedTestMethods.sort( Comparator.comparing( FrameworkMethod::getName ) );
 	}
 
 	protected List<FrameworkMethod> doComputation() {
@@ -184,7 +176,7 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 		final List<FrameworkMethod> methods = super.computeTestMethods();
 
 		// Now process that full list of test methods and build our custom result
-		final List<FrameworkMethod> result = new ArrayList<FrameworkMethod>();
+		final List<FrameworkMethod> result = new ArrayList<>();
 		final boolean doValidation = Boolean.getBoolean( Helper.VALIDATE_FAILURE_EXPECTED );
 		int testCount = 0;
 
@@ -230,7 +222,7 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 		}
 	}
 
-	private static Dialect dialect = determineDialect();
+	private static final Dialect dialect = determineDialect();
 
 	private static Dialect determineDialect() {
 		try {
@@ -429,7 +421,7 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 			for ( RequiresDialectFeature requiresDialectFeature : requiresDialectFeatures ) {
 				try {
 					for ( Class<? extends DialectCheck> checkClass : requiresDialectFeature.value() ) {
-						if ( !checkClass.newInstance().isMatch( dialect ) ) {
+						if ( !checkClass.getDeclaredConstructor().newInstance().isMatch( dialect ) ) {
 							return buildIgnore( requiresDialectFeature );
 						}
 					}
@@ -476,9 +468,6 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 			foundMatch = requiresDialectAnn.strictMatching()
 					? requiresDialectAnn.value().equals( dialect.getClass() )
 					: requiresDialectAnn.value().isInstance( dialect );
-			if ( foundMatch ) {
-				break;
-			}
 			if ( foundMatch ) {
 				break;
 			}
@@ -557,29 +546,29 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 	}
 
 	private Ignore buildIgnore(Collection<RequiresDialect> requiresDialects) {
-		String ignoreMessage = "";
+		StringBuilder ignoreMessage = new StringBuilder();
 		for ( RequiresDialect requiresDialect : requiresDialects ) {
-			ignoreMessage += getIgnoreMessage(
+			ignoreMessage.append( getIgnoreMessage(
 					"@RequiresDialect non-match",
 					requiresDialect.comment(),
 					requiresDialect.jiraKey()
-			);
-			ignoreMessage += System.lineSeparator();
+			) );
+			ignoreMessage.append( System.lineSeparator() );
 		}
-		return new IgnoreImpl( ignoreMessage );
+		return new IgnoreImpl( ignoreMessage.toString() );
 	}
 
 	private Ignore buildIgnore2(Collection<org.hibernate.testing.orm.junit.RequiresDialect> requiresDialects) {
-		String ignoreMessage = "";
+		StringBuilder ignoreMessage = new StringBuilder();
 		for ( org.hibernate.testing.orm.junit.RequiresDialect requiresDialect : requiresDialects ) {
-			ignoreMessage += getIgnoreMessage(
+			ignoreMessage.append( getIgnoreMessage(
 					"@RequiresDialect non-match",
 					requiresDialect.comment(),
 					null
-			);
-			ignoreMessage += System.lineSeparator();
+			) );
+			ignoreMessage.append( System.lineSeparator() );
 		}
-		return new IgnoreImpl( ignoreMessage );
+		return new IgnoreImpl( ignoreMessage.toString() );
 	}
 
 	private Ignore buildIgnore(RequiresDialectFeature requiresDialectFeature) {
@@ -600,7 +589,7 @@ public class CustomRunner extends BlockJUnit4ClassRunner {
 
 	private boolean isMatch(Class<? extends Skip.Matcher> condition) {
 		try {
-			Skip.Matcher matcher = condition.newInstance();
+			Skip.Matcher matcher = condition.getDeclaredConstructor().newInstance();
 			return matcher.isMatch();
 		}
 		catch (Exception e) {
